objects/Resume_Submission__c.object
<CustomObject>
    <description>Junction object between job opportunities and resumes</description>
    <fields>
        <fullName>Job_Opportunity__c</fullName>
        <label>Job Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Resume Submissions</relationshipLabel>
        <relationshipName>Resume_Submissions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <formula>TEXT(Job_Opportunity__r.LeadSource)</formula>
        <label>Lead Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <referenceTo>Resume__c</referenceTo>
        <relationshipLabel>Resume Submissions</relationshipLabel>
        <relationshipName>Resume_Submissions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Resume Submission</label>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Resume Submission Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resume Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>